get team full info
